# DiscordVoiceRotator

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
.jules/: sentinel.md
commands/: rotation.py
config/: guild_config.py  settings.py
services/: config_store.py  rotation_service.py
utils/: embeds.py  logging.py
